<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".CompletedTodoActivity">

    <nl.dionsegijn.konfetti.KonfettiView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/viewKonfetti"
        />

    <TextView
        android:id="@+id/TextViewHeader3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/completed_todo"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        android:textColor="@color/darkGreen"
        android:textStyle="bold|italic"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/CreateDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="116dp"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/ModifyDate2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="@+id/CreateDate2"
        app:layout_constraintTop_toBottomOf="@+id/CreateDate2" />

    <TextView
        android:id="@+id/CompletedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="TextView"
        app:layout_constraintLeft_toLeftOf="@+id/ModifyDate2"
        app:layout_constraintTop_toBottomOf="@+id/ModifyDate2" />

    <TextView
        android:id="@+id/TODOView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="content"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="@+id/CompletedDate"
        app:layout_constraintTop_toBottomOf="@+id/CompletedDate"/>

    <ImageButton
        android:id="@+id/UnMarkButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@+id/DeleteButton"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/iconfinder_refresh" />

    <ImageButton
        android:id="@+id/DeleteButton"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginLeft="24dp"
        android:layout_marginBottom="24dp"
        android:background="#00FFFFFF"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:srcCompat="@drawable/iconfinder_bin_empty" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/un_mark_todo"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/UnMarkButton"
        app:layout_constraintLeft_toRightOf="@+id/UnMarkButton"
        app:layout_constraintTop_toTopOf="@+id/UnMarkButton" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_todo"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@+id/DeleteButton"
        app:layout_constraintLeft_toRightOf="@+id/DeleteButton"
        app:layout_constraintTop_toTopOf="@+id/DeleteButton" />

</androidx.constraintlayout.widget.ConstraintLayout>